# worzpro-demo-template

./: .env.example  .gitignore  CUSTOMIZATION_GUIDE.md  LICENSE  QUICKSTART.md  README.md  demo_template.py  pyproject.toml  requirements.txt
assets/audio_samples/: README.md
