[project]
name = "worzpro-demo-template"
version = "1.0.0"
description = "Professional Gradio audio analysis demo template with madmom example"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

dependencies = [
    "gradio>=4.0.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "python-dotenv>=1.0.0",
    "madmom @ git+https://github.com/CPJKU/madmom",
    "yt-dlp>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 100
target-version = ['py39']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
